Repetition structures (for, while)

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     </head>
     <body>
         <script>
-            // Condição ternária
-            var sexo = 'M';
+            // for, while
 
-            // condição -- ? vai ser o resultado da condição se for verdadeiro -- : vai ser o segundo valor, caso tenha entrado no "else"
-            var retorno = (sexo === 'M') ? 'Masculino' : 'Feminino';
-            console.log(retorno);
+            //igual o das outras linguagens - indicado usar quando souber o tamanho do intervalo
+            for (var i = 0; i <= 100; i++){
+                console.log(i);
+            }
+
+            //igual o das outras linguagens - indicado usar quando não souber o tamanho do intervalo
+            var j = 28138475;
+            while (j > 50){
+                console.log(j);
+                j /= 5;
+            }
         </script>
     </body>
 </html>
