--- a/index.html
+++ b/index.html
@@ -23,9 +23,24 @@
                 boxElement.style.width = 100;
                 boxElement.style.height = 100;
                 boxElement.style.backgroundColor = '#f00';
+                
+                boxElement.onmouseover = function() {
+                    var newColor = getRandomColor();
+                    boxElement.style.backgroundColor = newColor;
+                }
 
                 i++;
                 alert('Div' + i + ' adicionada');
+            }
+
+            function getRandomColor() {
+                var letters = "0123456789ABCDEF";
+                var color = "#";
+                
+                for (var i = 0; i < 6; i++) {
+                    color += letters[Math.floor(Math.random() * 16)];
+                }
+                return color;
             }
         </script>
     </body>
