--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     </head>
     <body>
         <div id="App">
+            <input type="text" name="nome">
+            <button onClick="adicionar()">Adicionar</button>
             <ul class="lista"></ul>
         </div>
 
         <script>
             var nomes = ["Diego", "Gabriel", "Lucas"];
-
             var containerElement = document.querySelector(['ul.lista']);
             
             for(var i = 0; i < nomes.length; i++){
@@ -18,6 +19,17 @@
                 
                 containerElement.appendChild(elemento);
             }            
+
+            function adicionar() {
+                var inputElement = document.querySelector('input');
+                var x = inputElement.value;
+                inputElement.value = '';
+                nomes.push(x);
+
+                var elemento = document.createElement('li');
+                elemento.textContent = nomes[nomes.length - 1];
+                containerElement.appendChild(elemento);
+            }
         </script>
     </body>
 </html>
